// Vitest Snapshot v1

exports[`applyDefaultPlugins > should apply default plugins correctly 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[path][name]__[local]--[hash:5]",
        "localsConvention": "camelCase",
      },
    },
    "decorator": {
      "legacy": true,
    },
    "define": {
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.NODE_ENV": "\\"development\\"",
    },
    "pluginImport": [
      {
        "libraryDirectory": "es",
        "libraryName": "antd",
        "style": true,
      },
      {
        "camelToDashComponentName": false,
        "libraryDirectory": "es",
        "libraryName": "@arco-design/web-react",
        "style": true,
      },
      {
        "camelToDashComponentName": false,
        "libraryDirectory": "react-icon",
        "libraryName": "@arco-design/web-react/icon",
      },
    ],
    "presetEnv": {
      "coreJs": "3.30",
      "mode": "entry",
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "progress": {
      "prefix": "Client",
    },
    "react": {
      "development": true,
      "refresh": true,
      "runtime": "automatic",
    },
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": true,
  },
  "devtool": "cheap-module-source-map",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(png\\|jpg\\|jpeg\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tiff\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": Infinity,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
          {
            "resourceQuery": /url/,
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": false,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
          {
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@svgr/webpack/dist/index.js",
                "options": {
                  "svgo": true,
                  "svgoConfig": {
                    "plugins": [
                      {
                        "name": "preset-default",
                        "params": {
                          "overrides": {
                            "removeViewBox": false,
                          },
                        },
                      },
                      "prefixIds",
                    ],
                  },
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": 10000,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.svg\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/less-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/less-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
      },
      {
        "test": /\\\\\\.toml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/toml-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.ya\\?ml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/yaml-loader",
          },
        ],
      },
    ],
  },
  "name": "Client",
  "optimization": {
    "minimize": false,
    "runtimeChunk": {
      "name": "builder-runtime",
    },
    "splitChunks": {
      "cacheGroups": {
        "lib-antd": {
          "name": "lib-antd",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(antd\\)\\[\\\\\\\\/\\]/,
        },
        "lib-arco": {
          "name": "lib-arco",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(@\\?arco-design\\)\\[\\\\\\\\/\\]/,
        },
        "lib-lodash": {
          "name": "lib-lodash",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(lodash\\|lodash-es\\)\\[\\\\\\\\/\\]/,
        },
        "lib-polyfill": {
          "name": "lib-polyfill",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(core-js\\|@babel\\\\/runtime\\|@swc\\\\/helpers\\)\\[\\\\\\\\/\\]/,
        },
        "lib-react": {
          "name": "lib-react",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(react\\|react-dom\\)\\[\\\\\\\\/\\]/,
        },
        "lib-router": {
          "name": "lib-router",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(react-router\\|react-router-dom\\|@remix-run\\\\/router\\|history\\)\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    ForkTsCheckerWebpackPlugin {
      "options": {
        "issue": {
          "exclude": [
            {
              "file": "**/*.(spec|test).ts",
            },
            {
              "file": "**/node_modules/**/*",
            },
          ],
        },
        "logger": {
          "error": [Function],
          "log": [Function],
        },
        "typescript": {
          "configFile": "<ROOT>/tsconfig.json",
          "memoryLimit": 8192,
          "typescriptPath": "<WORKSPACE>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
        },
      },
    },
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "tsConfigPath": "<ROOT>/tsconfig.json",
  },
  "target": [
    "web",
    "es5",
  ],
}
`;

exports[`applyDefaultPlugins > should apply default plugins correctly when prod 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[hash:5]",
        "localsConvention": "camelCase",
      },
    },
    "decorator": {
      "legacy": true,
    },
    "define": {
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.NODE_ENV": "\\"production\\"",
    },
    "minifyOptions": {
      "extractComments": true,
    },
    "pluginImport": [
      {
        "libraryDirectory": "es",
        "libraryName": "antd",
        "style": true,
      },
      {
        "camelToDashComponentName": false,
        "libraryDirectory": "es",
        "libraryName": "@arco-design/web-react",
        "style": true,
      },
      {
        "camelToDashComponentName": false,
        "libraryDirectory": "react-icon",
        "libraryName": "@arco-design/web-react/icon",
      },
    ],
    "presetEnv": {
      "coreJs": "3.30",
      "mode": "entry",
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "progress": {
      "prefix": "Client",
    },
    "react": {
      "development": false,
      "refresh": false,
      "runtime": "automatic",
    },
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": false,
  },
  "devtool": "hidden-source-map",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(png\\|jpg\\|jpeg\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tiff\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": Infinity,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
          {
            "resourceQuery": /url/,
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": false,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
          {
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@svgr/webpack/dist/index.js",
                "options": {
                  "svgo": true,
                  "svgoConfig": {
                    "plugins": [
                      {
                        "name": "preset-default",
                        "params": {
                          "overrides": {
                            "removeViewBox": false,
                          },
                        },
                      },
                      "prefixIds",
                    ],
                  },
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": 10000,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.svg\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/less-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/less-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass",
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass",
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
      },
      {
        "test": /\\\\\\.toml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/toml-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.ya\\?ml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/yaml-loader",
          },
        ],
      },
    ],
  },
  "name": "Client",
  "optimization": {
    "minimize": true,
    "runtimeChunk": {
      "name": "builder-runtime",
    },
    "splitChunks": {
      "cacheGroups": {
        "lib-antd": {
          "name": "lib-antd",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(antd\\)\\[\\\\\\\\/\\]/,
        },
        "lib-arco": {
          "name": "lib-arco",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(@\\?arco-design\\)\\[\\\\\\\\/\\]/,
        },
        "lib-lodash": {
          "name": "lib-lodash",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(lodash\\|lodash-es\\)\\[\\\\\\\\/\\]/,
        },
        "lib-polyfill": {
          "name": "lib-polyfill",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(core-js\\|@babel\\\\/runtime\\|@swc\\\\/helpers\\)\\[\\\\\\\\/\\]/,
        },
        "lib-react": {
          "name": "lib-react",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(react\\|react-dom\\)\\[\\\\\\\\/\\]/,
        },
        "lib-router": {
          "name": "lib-router",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(react-router\\|react-router-dom\\|@remix-run\\\\/router\\|history\\)\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
  "output": {
    "chunkFilename": "static/js/async/[name].[contenthash:8].js",
    "cssChunkFilename": "static/css/async/[name].[contenthash:8].css",
    "cssFilename": "static/css/[name].[contenthash:8].css",
    "filename": "static/js/[name].[contenthash:8].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    ForkTsCheckerWebpackPlugin {
      "options": {
        "issue": {
          "exclude": [
            {
              "file": "**/*.(spec|test).ts",
            },
            {
              "file": "**/node_modules/**/*",
            },
          ],
        },
        "logger": {
          "error": [Function],
          "log": [Function],
        },
        "typescript": {
          "configFile": "<ROOT>/tsconfig.json",
          "memoryLimit": 8192,
          "typescriptPath": "<WORKSPACE>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
        },
      },
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "tests": [
        /builder-runtime\\(\\[\\.\\]\\.\\+\\)\\?\\\\\\.js\\$/,
      ],
    },
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "tsConfigPath": "<ROOT>/tsconfig.json",
  },
  "target": [
    "web",
    "es5",
  ],
}
`;

exports[`applyDefaultPlugins > should apply default plugins correctyly when target = node 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": true,
        "localIdentName": "[path][name]__[local]--[hash:5]",
        "localsConvention": "camelCase",
      },
    },
    "decorator": {
      "legacy": true,
    },
    "define": {
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.NODE_ENV": "\\"test\\"",
    },
    "pluginImport": [
      {
        "libraryDirectory": "lib",
        "libraryName": "antd",
        "style": true,
      },
      {
        "camelToDashComponentName": false,
        "libraryDirectory": "lib",
        "libraryName": "@arco-design/web-react",
        "style": true,
      },
      {
        "camelToDashComponentName": false,
        "libraryDirectory": "react-icon-cjs",
        "libraryName": "@arco-design/web-react/icon",
      },
    ],
    "presetEnv": {
      "targets": [
        "node >= 14",
      ],
    },
    "progress": {
      "prefix": "Server",
    },
    "react": {
      "development": true,
      "refresh": false,
      "runtime": "automatic",
    },
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": false,
  },
  "devtool": "cheap-module-source-map",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(png\\|jpg\\|jpeg\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tiff\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": Infinity,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
          {
            "resourceQuery": /url/,
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": false,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
          {
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@svgr/webpack/dist/index.js",
                "options": {
                  "svgo": true,
                  "svgoConfig": {
                    "plugins": [
                      {
                        "name": "preset-default",
                        "params": {
                          "overrides": {
                            "removeViewBox": false,
                          },
                        },
                      },
                      "prefixIds",
                    ],
                  },
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": 10000,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.svg\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
          },
          {
            "sideEffects": true,
            "type": "css",
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/less-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/less-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
      },
      {
        "test": /\\\\\\.toml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/toml-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.ya\\?ml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/yaml-loader",
          },
        ],
      },
    ],
  },
  "name": "Server",
  "optimization": {
    "minimize": false,
    "splitChunks": false,
  },
  "output": {
    "chunkFilename": "bundles/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "bundles/[name].js",
    "hashFunction": "xxhash64",
    "libraryTarget": "commonjs2",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    ForkTsCheckerWebpackPlugin {
      "options": {
        "issue": {
          "exclude": [
            {
              "file": "**/*.(spec|test).ts",
            },
            {
              "file": "**/node_modules/**/*",
            },
          ],
        },
        "logger": {
          "error": [Function],
          "log": [Function],
        },
        "typescript": {
          "configFile": "<ROOT>/tsconfig.json",
          "memoryLimit": 8192,
          "typescriptPath": "<WORKSPACE>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
        },
      },
    },
  ],
  "resolve": {
    "conditionNames": [
      "require",
      "node",
    ],
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "tsConfigPath": "<ROOT>/tsconfig.json",
  },
  "target": "node",
}
`;

exports[`tools.rspack > should match snapshot 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[path][name]__[local]--[hash:5]",
        "localsConvention": "camelCase",
      },
    },
    "decorator": {
      "legacy": true,
    },
    "define": {
      "process.env.ASSET_PREFIX": "\\"\\"",
      "process.env.NODE_ENV": "\\"development\\"",
    },
    "pluginImport": [
      {
        "libraryDirectory": "es",
        "libraryName": "antd",
        "style": true,
      },
      {
        "camelToDashComponentName": false,
        "libraryDirectory": "es",
        "libraryName": "@arco-design/web-react",
        "style": true,
      },
      {
        "camelToDashComponentName": false,
        "libraryDirectory": "react-icon",
        "libraryName": "@arco-design/web-react/icon",
      },
    ],
    "presetEnv": {
      "coreJs": "3.30",
      "mode": "entry",
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "progress": {
      "prefix": "Client",
    },
    "react": {
      "development": true,
      "refresh": true,
      "runtime": "automatic",
    },
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": true,
  },
  "devtool": "cheap-module-source-map",
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "test": /\\\\\\.test\\$/,
        "use": [
          {
            "loader": "builtin:sass-loader",
          },
        ],
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(png\\|jpg\\|jpeg\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tiff\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 0,
              },
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset",
          },
          {
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "issuer": {
              "not": [
                /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
                /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              ],
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
          {
            "resourceQuery": /inline/,
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": Infinity,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
          {
            "resourceQuery": /url/,
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": false,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
          {
            "type": "javascript/auto",
            "use": [
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@svgr/webpack/dist/index.js",
                "options": {
                  "svgo": true,
                  "svgoConfig": {
                    "plugins": [
                      {
                        "name": "preset-default",
                        "params": {
                          "overrides": {
                            "removeViewBox": false,
                          },
                        },
                      },
                      "prefixIds",
                    ],
                  },
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/url-loader",
                "options": {
                  "limit": 10000,
                  "name": "static/svg/[name].[contenthash:8].svg",
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.svg\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/less-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/less-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass-loader",
                "options": {
                  "implementation": "<WORKSPACE>/packages/builder/builder-shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
      },
      {
        "test": /\\\\\\.toml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/toml-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.ya\\?ml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/yaml-loader",
          },
        ],
      },
    ],
  },
  "name": "Client",
  "optimization": {
    "minimize": false,
    "runtimeChunk": {
      "name": "builder-runtime",
    },
    "splitChunks": {
      "cacheGroups": {
        "lib-antd": {
          "name": "lib-antd",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(antd\\)\\[\\\\\\\\/\\]/,
        },
        "lib-arco": {
          "name": "lib-arco",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(@\\?arco-design\\)\\[\\\\\\\\/\\]/,
        },
        "lib-lodash": {
          "name": "lib-lodash",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(lodash\\|lodash-es\\)\\[\\\\\\\\/\\]/,
        },
        "lib-polyfill": {
          "name": "lib-polyfill",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(core-js\\|@babel\\\\/runtime\\|@swc\\\\/helpers\\)\\[\\\\\\\\/\\]/,
        },
        "lib-react": {
          "name": "lib-react",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(react\\|react-dom\\)\\[\\\\\\\\/\\]/,
        },
        "lib-router": {
          "name": "lib-router",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(react-router\\|react-router-dom\\|@remix-run\\\\/router\\|history\\)\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    TestPlugin {
      "name": "TestPlugin",
    },
    ForkTsCheckerWebpackPlugin {
      "options": {
        "issue": {
          "exclude": [
            {
              "file": "**/*.(spec|test).ts",
            },
            {
              "file": "**/node_modules/**/*",
            },
          ],
        },
        "logger": {
          "error": [Function],
          "log": [Function],
        },
        "typescript": {
          "configFile": "<ROOT>/tsconfig.json",
          "memoryLimit": 8192,
          "typescriptPath": "<WORKSPACE>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
        },
      },
    },
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "tsConfigPath": "<ROOT>/tsconfig.json",
  },
  "target": [
    "web",
    "es5",
  ],
}
`;
